--- a/Distrubtions.ipynb
+++ b/Distrubtions.ipynb
@@ -254,11 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "99d60301",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ths function creates the plot for the column being looked at\n",
     "def plot_feature(col):\n",
     "    feature = df[col]\n",
     "    mean = feature.mean()\n",
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6b5fc23d",
    "metadata": {},
    "outputs": [
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d8231faf",
    "metadata": {},
    "outputs": [
@@ -318,7 +319,7 @@
        "3.013147515833447"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c5def01d",
    "metadata": {},
    "outputs": [
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "6bfb1401",
    "metadata": {},
    "outputs": [
@@ -388,7 +389,7 @@
        "2.9919958083381206"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a318c33d",
    "metadata": {
     "scrolled": true
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "5ec08c0f",
    "metadata": {},
    "outputs": [
@@ -460,7 +461,7 @@
        "2.9919958083381206"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
